[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Entities/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/Entities/Actor.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/graphics/Entities/enemy.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 1 ), SubResource( 3 ), SubResource( 1 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), null, SubResource( 1 ), null ],
"loop": true,
"name": "Hurt",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11.8688, 26.7052 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 336, 116.978 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 394, 158.667 )

[node name="Enemy" instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" parent="." index="1"]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 4 )
animation = "Walking"
frame = 2

[node name="Hitbox" parent="." index="2"]
position = Vector2( 0, 7.63452 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 5 )

[node name="TutorialNotifier" type="Area2D" parent="." index="3"]
scale = Vector2( 1.5, 1.5 )

[node name="TutorialDistance" type="CollisionShape2D" parent="TutorialNotifier" index="0"]
shape = SubResource( 6 )

[node name="PlayerVisibility" type="Area2D" parent="." index="4"]
scale = Vector2( 1.5, 1.5 )

[node name="VisionDistance" type="CollisionShape2D" parent="PlayerVisibility" index="0"]
position = Vector2( -0.666667, -91.3333 )
shape = SubResource( 7 )

[node name="ReloadTimer" type="Timer" parent="." index="5"]
wait_time = 1.5

[node name="AimingTime" type="Timer" parent="." index="6"]
wait_time = 0.2

[node name="InvincibilityTimer" type="Timer" parent="." index="7"]
[connection signal="body_entered" from="TutorialNotifier" to="." method="_on_TutorialNotifier_body_entered"]
[connection signal="body_entered" from="PlayerVisibility" to="." method="_on_PlayerVisibility_body_entered"]
[connection signal="body_exited" from="PlayerVisibility" to="." method="_on_PlayerVisibility_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="AimingTime" to="." method="_on_AimingTime_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
